--- a/Yandex Algo 5.ipynb
+++ b/Yandex Algo 5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e6353f23",
+   "id": "85a4e051",
    "metadata": {},
    "source": [
     "## Yandex Algo 5.0"
@@ -10,7 +10,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54cc618",
+   "id": "9ff3a30f",
+   "metadata": {},
+   "source": [
+    "____\n",
+    "\n",
+    "## Неделя 1\n",
+    "____"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8083a6aa",
    "metadata": {},
    "source": [
     "**A. Покраска деревьев**\n",
@@ -49,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "905b8457",
+   "id": "5f38dc5f",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24911909",
+   "id": "522bccce",
    "metadata": {},
    "source": [
     "**B. Футбольный комментатор**\n",
@@ -181,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e80ac568",
+   "id": "edc3a0eb",
    "metadata": {},
    "outputs": [
     {
@@ -255,9 +266,282 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1524305e",
+   "metadata": {},
+   "source": [
+    "**C. Форматирование файла**\n",
+    "\n",
+    "Ограничение времени \t1 секунда\n",
+    "Ограничение памяти \t256Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Петя - начинающий программист. Сегодня он написал код из n строк.\n",
+    "\n",
+    "К сожалению оказалось, что этот код трудно читать. Петя решил исправить это, добавив в различные места пробелы. А точнее, для i-й строки ему нужно добавить ровно ai пробелов.\n",
+    "\n",
+    "Для добавления пробелов Петя выделяет строку и нажимает на одну из трёх клавиш: Space, Tab, и Backspace. При нажатии на Space в строку добавляется один пробел. При нажатии на Tab в строку добавляются четыре пробела. При нажатии на Backspace в строке удаляется один пробел.\n",
+    "\n",
+    "Ему хочется узнать, какое наименьшее количество клавиш придётся нажать, чтобы добавить необходимое количество пробелов в каждую строку. Помогите ему!\n",
+    "\n",
+    "**Формат ввода**\n",
+    "Первая строка входных данных содержит одно целое положительное число n(1≤n≤105) – количество строк в файле.\n",
+    "Каждая из следующих n строк содержит одно целое неотрицательное число ai(0≤ai≤109) – количество пробелов, которые нужно добавить в i-ю строку файла.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "Выведите одно число – минимальное количество нажатий, чтобы добавить в каждой строке необходимое количество пробелов.\n",
+    "\n",
+    "**Пример**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "5\n",
+    "1\n",
+    "4\n",
+    "12\n",
+    "9\n",
+    "0\n",
+    "\n",
+    "8\n",
+    "\n",
+    "Примечания\n",
+    "В примере можно:\n",
+    "\n",
+    "    1 раз нажать на Space в первой строке.\n",
+    "    1 раз нажать на Tab на второй строке.\n",
+    "    3 раза нажать на Tab в третьей строке.\n",
+    "    2 раза нажать на Tab и один раз нажать на Space в четвёртой строке.\n",
+    "    Ничего не нажимать в пятой строке.\n",
+    "\n",
+    "В итоге получается 1+1+3+3=8 нажатий. Можно доказать, что нельзя добавить необходимое количество пробелов за 7 нажатий или меньше.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "db6e791a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1\n",
+      "4\n",
+      "12\n",
+      "9\n",
+      "0\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_of_lines = int(input())\n",
+    "\n",
+    "lines=[]\n",
+    "presses_needed = 0\n",
+    "\n",
+    "for i in range(num_of_lines):\n",
+    "    line = int(input())\n",
+    "    lines.append(line)\n",
+    "    \n",
+    "def find_num_of_presses(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n < 3:\n",
+    "        return n\n",
+    "    elif n == 3:\n",
+    "        return 2\n",
+    "    elif n == 4:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return (n//4 + find_num_of_presses(n%4))\n",
+    "    \n",
+    "    \n",
+    "for i in range(num_of_lines):\n",
+    "    presses_needed += find_num_of_presses(lines[i])\n",
+    "    \n",
+    "print(presses_needed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "351e0972",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**D. Слоны и ладьи**\n",
+    "\n",
+    "Ограничение времени \t1 секунда\n",
+    "Ограничение памяти \t64Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "На шахматной доске стоят слоны и ладьи, необходимо посчитать, сколько клеток не бьется ни одной из фигур.\n",
+    "\n",
+    "Шахматная доска имеет размеры 8 на 8. Ладья бьет все клетки горизонтали и вертикали, проходящих через клетку, где она стоит, до первой встретившейся фигуры. Слон бьет все клетки обеих диагоналей, проходящих через клетку, где он стоит, до первой встретившейся фигуры.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "В первых восьми строках ввода описывается шахматная доска. Первые восемь символов каждой из этих строк описывают состояние соответствующей горизонтали: символ B (заглавная латинская буква) означает, что в клетке стоит слон, символ R — ладья, символ * — что клетка пуста. После описания горизонтали в строке могут идти пробелы, однако длина каждой строки не превышает 250 символов. После описания доски в файле могут быть пустые строки.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "Выведите количество пустых клеток, которые не бьются ни одной из фигур.\n",
+    "\n",
+    "**Пример 1**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "```\n",
+    "********\n",
+    "********\n",
+    "*R******\n",
+    "********\n",
+    "********\n",
+    "********\n",
+    "********\n",
+    "********\n",
+    "```\n",
+    "\n",
+    "49\n",
+    "\n",
+    "**Пример 2**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "```\n",
+    "********\n",
+    "********\n",
+    "******B*\n",
+    "********\n",
+    "********\n",
+    "********\n",
+    "********\n",
+    "********\n",
+    "```\n",
+    "\n",
+    "54\n",
+    "\n",
+    "**Пример 3**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "```\n",
+    "********\n",
+    "*R******\n",
+    "********\n",
+    "*****B**\n",
+    "********\n",
+    "********\n",
+    "********\n",
+    "********\n",
+    "```\n",
+    "\n",
+    "40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "10fa6653",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "# chess_board = []\n",
+    "\n",
+    "# chess_board = ['********',\n",
+    "# '********',\n",
+    "# '*R******',\n",
+    "# '********',\n",
+    "# '********',\n",
+    "# '********',\n",
+    "# '********',\n",
+    "# '********']\n",
+    "\n",
+    "# chess_board = ['********',\n",
+    "# '********',\n",
+    "# '******B*',\n",
+    "# '********',\n",
+    "# '********',\n",
+    "# '********',\n",
+    "# '********',\n",
+    "# '********']\n",
+    "\n",
+    "# chess_board = ['********',\n",
+    "# '*R******',\n",
+    "# '********',\n",
+    "# '*****B**',\n",
+    "# '********',\n",
+    "# '********',\n",
+    "# '********',\n",
+    "# '********'\n",
+    "# ]\n",
+    "\n",
+    "chess_board = ['********',\n",
+    "'***B****',\n",
+    "'**BRB***',\n",
+    "'***B****',\n",
+    "'********',\n",
+    "'********',\n",
+    "'********',\n",
+    "'********']\n",
+    "\n",
+    "squares_beat = set()\n",
+    "squares_remaining = 64\n",
+    "\n",
+    "# for i in range(8):\n",
+    "#     chess_board.append(input().strip())\n",
+    "    \n",
+    "def rook_beats_squares(row, col):\n",
+    "    set_of_squares = set()\n",
+    "    for i in range(8):\n",
+    "        set_of_squares.add((row,i))\n",
+    "        set_of_squares.add((i,col))\n",
+    "    return set_of_squares\n",
+    "\n",
+    "\n",
+    "def bishop_beats_squares(row, col):\n",
+    "    set_of_squares = set()\n",
+    "    set_of_squares.add((row, col))\n",
+    "    for i in range(8):\n",
+    "        for j in range(8):\n",
+    "            if abs(row-i) == abs(col-j):\n",
+    "                set_of_squares.add((i,j))\n",
+    "    return set_of_squares\n",
+    "\n",
+    "\n",
+    "for row in range(8):\n",
+    "    for col in range(8):\n",
+    "        if chess_board[row][col] == 'R':\n",
+    "            squares_beat = squares_beat.union(rook_beats_squares(row, col))\n",
+    "        elif chess_board[row][col] == 'B':\n",
+    "            squares_beat = squares_beat.union(bishop_beats_squares(row, col))\n",
+    "    \n",
+    "squares_remaining -= len(squares_beat)\n",
+    "    \n",
+    "print(squares_remaining)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d55e017",
+   "id": "bbaffa68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9297a6a",
    "metadata": {},
    "outputs": [],
    "source": []
