--- a/Yandex Algo 5.ipynb
+++ b/Yandex Algo 5.ipynb
@@ -876,7 +876,8 @@
     "    Если казармы еще не разрушены, ваш противник производит p новых солдат.\n",
     "\n",
     "Ваша задача — разрушить казарму и убить всех солдат противника. Если это возможно, посчитайте минимальное количество раундов, которое вам нужно для этого. В противном случае выведите -1.\n",
-    "Формат ввода\n",
+    "\n",
+    "**Формат ввода**\n",
     "\n",
     "На вход подаётся три целых числа x, y, p (1 ≤ x, y, p ≤ 5000) — количество ваших солдат на старте игры, количество очков здоровья казармы и количество производимых за раунд казармой солдат, соответственно. Каждое число расположено в новой строке.\n",
     "\n",
@@ -944,6 +945,16 @@
     "249\n",
     "?101\n",
     "\n",
+    "78\n",
+    "4934\n",
+    "77\n",
+    "4812\n",
+    "\n",
+    "250\n",
+    "500\n",
+    "218\n",
+    "6\n",
+    "\n",
     "**Примечания**\n",
     "\n",
     "В первом примере в первом раунде сначала все ваши солдату атакуют казарму, после этого не происходит ничего, потому что у врага нет солдат, затем у врага появляется 15 солдат. Во втором раунде один ваш солдат добивает казарму, остальные 9 солдат убивают 9 солдат врага. Оставшиеся 6 солдат врага убивают 6 ваших солдат, но армия врага не пополняется, поскольку казарма разрушена. В третьем раунде сначала вы убиваете четверых солдат врага, затем враг двоих ваших солдат. В последнем, четвертом, раунде вы добиваете двух оставшихся солдат врага. "
@@ -951,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 83,
    "id": "448505af",
    "metadata": {},
    "outputs": [
@@ -959,10 +970,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5000\n",
-      "5000\n",
-      "5000\n",
-      "1\n"
+      "10\n",
+      "11\n",
+      "15\n",
+      "4\n"
      ]
     }
    ],
@@ -1008,11 +1019,17 @@
     "#     (enemy_soldiers_alive - (damage_to_deal - barracks_health))\\\n",
     "#     <= my_soldiers_alive-(enemy_soldiers_alive - (damage_to_deal - barracks_health)):\n",
     "#         current_priority = 'barracks'\n",
-    "    enemy_soldiers_after_decline = enemy_soldiers_alive - (damage_to_deal - barracks_health)\n",
+    "    enemy_soldiers_after_decline = max((enemy_soldiers_alive - max(damage_to_deal - barracks_health, 0)),0)\n",
+    "    \n",
+    "#     print(f' enemy_soldiers_after_decline: {enemy_soldiers_after_decline}')\n",
+    "#     print(f' my_soldiers_after_enemy attack: {my_soldiers_alive-enemy_soldiers_after_decline}')\n",
+    "#     print(f' min_soldiers_to_beat_enemy {min_soldiers_to_beat_enemy[max(enemy_soldiers_after_decline-1, 0)]}')\n",
+    "#     print(f' barracks health: {barracks_health}')\n",
     "    \n",
     "    if (barracks_health < damage_to_deal) and \\\n",
-    "    my_soldiers_alive-enemy_soldiers_after_decline >\\\n",
-    "    min_soldiers_to_beat_enemy[enemy_soldiers_after_decline-1][1]:\n",
+    "    my_soldiers_alive-enemy_soldiers_after_decline >=\\\n",
+    "    min_soldiers_to_beat_enemy[max(enemy_soldiers_after_decline-1, 0)][1] and\\\n",
+    "    (enemy_soldiers_after_decline / (my_soldiers_alive-enemy_soldiers_after_decline)) <= 1.6 :\n",
     "        current_priority = 'barracks'\n",
     "    \n",
     "    elif (enemy_soldiers_alive > 0) and (enemy_soldiers_alive < my_soldiers_alive):\n",
@@ -1065,7 +1082,12 @@
     "        enemy_soldiers_alive += p\n",
     "\n",
     "\n",
-    "print(moves_made)"
+    "print(moves_made)\n",
+    "\n",
+    "# print(min_soldiers_to_beat_enemy[0:156])\n",
+    "# print(f'enemy_soldiers_after_decline 154')\n",
+    "# print(f'my_soldiers_after_enemy attack 96')\n",
+    "# print(f'min_soldiers_to_beat_enemy[enemy_soldiers_after_decline-1] {min_soldiers_to_beat_enemy[153]}')"
    ]
   },
   {
@@ -1075,6 +1097,212 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a27b68a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c7ad76d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bca3400",
+   "metadata": {},
+   "source": [
+    "### H. Забег по стадиону\n",
+    "\n",
+    "Ограничение времени \t1 секунда\n",
+    "Ограничение памяти \t256Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Стадион представляет собой окружность длинойL метров, на которой отмечена точка старта. По стадиону бегают Кирилл и Антон. У каждого мальчика есть своя точка старта (она представляет собой расстояние в метрах от старта, отсчитанное по часовой стрелке) и своя скорость в метрах в секунду (положительная скорость означает, что мальчик бежит по часовой стрелке, отрицательная — что бежит против часовой, а нулевая — что он стоит на месте).\n",
+    "\n",
+    "Вам нужно сказать, через какое минимальное время мальчики окажутся на одинаковом расстоянии от точки старта. Обратите внимание, что в этот момент они могли находиться в разных точках. Расстоянием от точки A до точки B называется минимальное из расстояний, которое нужно пробежать из точки A по или против часовой стрелки, чтобы оказаться в B.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "В единственной строке вводится 5 целых чисел L,x1,v1,x2,v2 (1≤L≤109, 0≤x1,x2<L, ∣∣v1∣∣,∣∣v2∣∣≤109) — длины стадиона в метрах, начальная точка Кирилла, скорость Кирилла, начальная точка Антона, скорость Антона.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "В первой строке выведите слово «YES», если случится момент, когда мальчики будут на одинаковом расстоянии от старта, или «NO», если такого момента не произойдёт.\n",
+    "\n",
+    "Если ответ «YES», то во второй строке выведите одно вещественное число — через какое минимальное количество времени мальчики окажутся на одинаковом расстоянии от старта.\n",
+    "\n",
+    "Вы можете выводить каждую букву в любом регистре (строчную или заглавную). Например, строки «yEs», «yes», «Yes» и «YES» будут приняты как положительный ответ.\n",
+    "\n",
+    "Ваш ответ будет считаться правильным, если его абсолютная или относительная ошибка не превосходит 10−9.\n",
+    "\n",
+    "Формально, пусть ваш ответ равен a, а ответ жюри равен b. Ваш ответ будет зачтен, если и только если |a−b|max(1,|b|)≤10−9.\n",
+    "\n",
+    "**Пример 1**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "6 3 1 1 1\n",
+    "\n",
+    "YES\n",
+    "1.0000000000\n",
+    "\n",
+    "**Пример 2**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "12 8 10 5 20\n",
+    "\n",
+    "YES\n",
+    "0.3000000000\n",
+    "\n",
+    "**Пример 3**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "5 0 0 1 2\n",
+    "\n",
+    "YES\n",
+    "2.0000000000\n",
+    "\n",
+    "**Пример 4**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "10 7 -3 1 4\n",
+    "\n",
+    "YES\n",
+    "0.8571428571\n",
+    "\n",
+    "762899414 556082848 -539099316 556082848 -582799403\n",
+    "\n",
+    "YES\n",
+    "0.0000000000\n",
+    "\n",
+    "72 20 -38121735 66 288888467\n",
+    "\n",
+    "YES\n",
+    "7.950822280462063e-08\n",
+    "\n",
+    "\n",
+    "956390104 549514100 7 315097830 -7\n",
+    "\n",
+    "**Примечания**\n",
+    "В первом тесте Кирилл изначально находится в точке 3 и бежит по часовой стрелке со скоростью 1. Антон находится в точке 1 и также бежит по часовой стрелке со скоростью 1. Через 1 секунду мальчики окажутся в точках 4 и 2 соответственно. Обе эти точки расположены на расстоянии 2 метра от старта (точки 0, совпадающей с точкой 6). Можно показать, что до этого они всегда находились на разном расстоянии от старта. Значит, ответ — 1.\n",
+    "\n",
+    "Во втором тесте оба мальчика окажутся в точке 11 через 0.3 секунды.\n",
+    "\n",
+    "В третьем Антон прибежит к Кириллу в точку 0 за 2 секунды. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "3e2c38d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "956390104 549514100 7 315097830 -7\n",
+      "YES\n",
+      "51569559.571428575\n"
+     ]
+    }
+   ],
+   "source": [
+    "L, x1, v1, x2, v2 = map(int, input().split())\n",
+    "\n",
+    "n = 1\n",
+    "\n",
+    "\n",
+    "list_of_times = []\n",
+    "\n",
+    "# check if starting positions coinside\n",
+    "len11 = x1\n",
+    "len21 = x2\n",
+    "len22 = L - x2\n",
+    "\n",
+    "if (len11 == len21) or (len11 == len22):\n",
+    "    list_of_times.append(0.0)\n",
+    "\n",
+    "while n < 15:\n",
+    "    \n",
+    "    m = 1    \n",
+    "    \n",
+    "    while m < 15:\n",
+    "        \n",
+    "        t1 = None\n",
+    "        t2 = None\n",
+    "        \n",
+    "        #compare two distances from start \n",
+    "        if v2 != v1:\n",
+    "            t1 = ((x2 - x1) + L * (n-m)) / (v1 - v2)\n",
+    "            if t1 > 0:\n",
+    "#                 print(f'n = {n}, m = {m}, t1= {t1}')\n",
+    "                list_of_times.append(t1)\n",
+    "        \n",
+    "    \n",
+    "        #compare one distance from start and one from finish\n",
+    "        if v1 != - v2:\n",
+    "            t2 = (L*(n-m) + L - x1 -x2) / (v1 + v2)\n",
+    "            if t2 > 0:\n",
+    "#                 print(f'n = {n}, m = {m}, t1= {t2}')\n",
+    "                list_of_times.append(t2)\n",
+    "    \n",
+    "        m += 1\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "#     #compare two distances from start \n",
+    "#     if n*v2 != v1:\n",
+    "#         t1 = (x1 - n*x2) / (n*v2 - v1)\n",
+    "#         if t1 > 0:\n",
+    "#             print(f'n = {n}, t1= {t1}')\n",
+    "#             list_of_times.append(t1)\n",
+    "\n",
+    "    #compare one distance from start and one from finish\n",
+    "#     if v1 != n*v2:\n",
+    "# #         t2 = (n * (L - x2) - x1) / (v1 + n*v2)\n",
+    "#         t2 = (n * (L - x2) - x1) / (v1 + n*v2)\n",
+    "        \n",
+    "#         if t2 > 0:\n",
+    "#             print(f'n = {n}, t2= {t2}')\n",
+    "#             list_of_times.append(t2)\n",
+    "     \n",
+    "    n += 1\n",
+    "\n",
+    "if list_of_times:\n",
+    "    min_time = min(list_of_times)\n",
+    "    print('YES')\n",
+    "    print(min_time)\n",
+    "\n",
+    "else:\n",
+    "    print('NO')\n",
+    "\n",
+    "# print(list_of_times)\n",
+    "# print(min_time)\n",
+    "    \n",
+    "# print (L, x1, v1, x2, v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f556beb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "5 0 0 1 2"
+   ]
   }
  ],
  "metadata": {
