--- a/Yandex Algo 5 week 2.ipynb
+++ b/Yandex Algo 5 week 2.ipynb
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 16,
    "id": "45a87ad0",
    "metadata": {},
    "outputs": [
@@ -777,6 +777,16 @@
     "# a, b, k = 49, 79, 384\n",
     "# 692\n",
     "\n",
+    "# n = 8\n",
+    "# scores = [952, 159, 945, 463, 133, 101, 767, 314]\n",
+    "# a, b, k = 47, 448, 28\n",
+    "# 952\n",
+    "\n",
+    "# n = 9\n",
+    "# scores = [925, 160, 322, 433, 698, 458, 923, 877, 741]\n",
+    "# a, b, k = 46, 92, 12\n",
+    "# 923?\n",
+    "\n",
     "Vmax = max(a,b)\n",
     "Vmin = min(a,b)\n",
     "\n",
@@ -792,7 +802,7 @@
     "    all_range_available_flag = 1\n",
     "elif ((shift_max // n) - (shift_min // n)) > 1:\n",
     "    all_range_available_flag = 1\n",
-    "elif ((Vmax - 1) // k) > ((Vmin - 1) // k):\n",
+    "elif (((Vmax - 1) // k) - ((Vmin - 1) // k)) >= n:\n",
     "    all_range_available_flag = 1\n",
     "\n",
     "shift_max = shift_max % n\n",
@@ -801,7 +811,7 @@
     "#going clockwise\n",
     "if all_range_available_flag == 1:\n",
     "    shift_list_1 = set().union(scores)\n",
-    "if shift_max > shift_min:\n",
+    "elif shift_max > shift_min:\n",
     "    shift_list_1 = set().union(scores[shift_min:shift_max+1])\n",
     "elif shift_max < shift_min:\n",
     "    shift_list_1 = set().union(scores[0:shift_max+1])\n",
@@ -843,43 +853,173 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84adb109",
+   "metadata": {},
+   "source": [
+    "### G. Ни больше ни меньше\n",
+    "\n",
+    "Ограничение времени \t2 секунды\n",
+    "Ограничение памяти \t256Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Дан массив целых положительных чисел a длины n. Разбейте его на минимально возможное количество отрезков, чтобы каждое число было не меньше длины отрезка которому оно принадлежит. Длиной отрезка считается количество чисел в нем.\n",
+    "\n",
+    "Разбиение массива на отрезки считается корректным, если каждый элемент принадлежит ровно одному отрезку.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "\n",
+    "Первая строка содержит одно целое число t (1 ≤ t ≤ 1 000) — количество наборов тестовых данных. Затем следуют t наборов тестовых данных.\n",
+    "\n",
+    "Первая строка набора тестовых данных содержит одно целое число n (1 ≤ n ≤ 105) — длину массива.\n",
+    "\n",
+    "Следующая строка содержит n целых чисел a1, a2, …, an (1 ≤ ai ≤ n) — массив a.\n",
+    "\n",
+    "Гарантируется, что сумма n по всем наборам тестовых данных не превосходит 2 ⋅ 105.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "\n",
+    "Для каждого набора тестовых данных в первой строке выведите число k — количество отрезков в вашем разбиении.\n",
+    "\n",
+    "Затем в следующей строке выведите k чисел len1, len2, …, lenk — длины отрезков в порядке слева направо.\n",
+    "\n",
+    "**Пример**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    ">3\n",
+    "\n",
+    ">5\n",
+    "\n",
+    ">1 3 3 3 2\n",
+    "\n",
+    ">16\n",
+    "\n",
+    ">1 9 8 7 6 7 8 9 9 9 9 9 9 9 9 9\n",
+    "\n",
+    ">7\n",
+    "\n",
+    ">7 2 3 4 3 2 7\n",
+    "\n",
+    "3\n",
+    "\n",
+    "1 2 2\n",
+    "\n",
+    "3\n",
+    "\n",
+    "1 6 9 \n",
+    "\n",
+    "3\n",
+    "\n",
+    "2 3 2 \n",
+    "\n",
+    "**Примечания**\n",
+    "\n",
+    "Ответы в примере соответствуют разбиениям:\n",
+    "\n",
+    "{[1], [3, 3], [3, 2]}\n",
+    "\n",
+    "{[1], [9, 8, 7, 6, 7, 8], [9, 9, 9, 9, 9, 9, 9, 9, 9]}\n",
+    "\n",
+    "{[7, 2], [3, 4, 3], [2, 7]}\n",
+    "\n",
+    "В первом наборе тестовых данных набор длин {1, 3, 1}, соответствующий разбиению {[1], [3, 3, 3], [2]}, также был бы корректным.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "437c059b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "1 3 3 3 2\n",
+      "16\n",
+      "1 9 8 7 6 7 8 9 9 9 9 9 9 9 9 9\n",
+      "7\n",
+      "7 2 3 4 3 2 7\n",
+      "3\n",
+      "1 3 1\n",
+      "3\n",
+      "1 6 9\n",
+      "3\n",
+      "2 3 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_of_test_elems = []\n",
+    "all_test_data = []\n",
+    "all_segments = []\n",
+    "\n",
+    "tests = int(input())\n",
+    "for test in range(tests):\n",
+    "    num_of_test_elems.append(int(input()))\n",
+    "    test_nums = [i for i in map(int, input().split())]\n",
+    "    all_test_data.append(test_nums)\n",
+    "     \n",
+    "\n",
+    "# tests = 3\n",
+    "# num_of_test_elems.append(5)\n",
+    "# all_test_data.append([1, 3, 3, 3, 2])\n",
+    "# num_of_test_elems.append(16)\n",
+    "# all_test_data.append([1, 9, 8, 7, 6, 7, 8, 9, 9, 9, 9, 9, 9, 9, 9, 9])\n",
+    "# num_of_test_elems.append(7)\n",
+    "# all_test_data.append([7, 2, 3, 4, 3, 2, 7])\n",
+    "\n",
+    "for test in range(tests):\n",
+    "    max_seg_len = 0\n",
+    "    current_len = 0\n",
+    "#     seg_len_if_added = 0\n",
+    "    segments = []\n",
+    "    \n",
+    "    for elem in range(num_of_test_elems[test]):\n",
+    "        if current_len == 0:\n",
+    "            max_seg_len = all_test_data[test][elem]\n",
+    "            current_len = 1\n",
+    "        elif (current_len+1) <= all_test_data[test][elem]:\n",
+    "            current_len += 1\n",
+    "            if all_test_data[test][elem] < max_seg_len:\n",
+    "                max_seg_len = all_test_data[test][elem]\n",
+    "        elif (current_len+1) > all_test_data[test][elem]:\n",
+    "            segments.append(current_len)\n",
+    "            max_seg_len = all_test_data[test][elem]\n",
+    "            current_len = 1\n",
+    "        if (max_seg_len == current_len) or (elem == (num_of_test_elems[test] - 1)):\n",
+    "            segments.append(current_len)\n",
+    "            max_seg_len = 0\n",
+    "            current_len = 0\n",
+    "    \n",
+    "    all_segments.append(segments)\n",
+    "    \n",
+    "\n",
+    "for test in range(tests):\n",
+    "    print(len(all_segments[test]))\n",
+    "    print(' '.join(map(str,all_segments[test])))\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30d9e8e1",
+   "id": "1fc26ad4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "3\n",
     "5\n",
-    "\n",
-    "1 2 3 4 5\n",
-    "\n",
-    "3 5 2\n",
-    "\n",
-    "5\n",
-    "\n",
-    "**Пример 2**\n",
-    "Ввод\n",
-    "Вывод\n",
-    "\n",
-    "5\n",
-    "\n",
-    "1 2 3 4 5\n",
-    "\n",
-    "15 15 2\n",
-    "\n",
-    "4\n",
-    "\n",
-    "**Пример 3**\n",
-    "Ввод\n",
-    "Вывод\n",
-    "\n",
-    "5\n",
-    "\n",
-    "5 4 3 2 1\n",
-    "\n",
-    "2 5 2\n",
-    "\n",
-    "5"
+    "1 3 3 3 2\n",
+    "16\n",
+    "1 9 8 7 6 7 8 9 9 9 9 9 9 9 9 9\n",
+    "7\n",
+    "7 2 3 4 3 2 7\n"
    ]
   }
  ],
