--- a/Yandex Algo 5 week 2.ipynb
+++ b/Yandex Algo 5 week 2.ipynb
@@ -1306,7 +1306,7 @@
    "execution_count": 18,
    "id": "b68e6cd6",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2153,115 +2153,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7afab8eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab6a903a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de6d11d4",
-   "metadata": {},
-   "source": [
-    "### I. Пираты Баренцева моря\n",
-    "\n",
-    "Ограничение времени \t1 секунда\n",
-    "Ограничение памяти \t64Mb\n",
-    "\n",
-    "Ввод \tстандартный ввод или input.txt\n",
-    "Вывод \tстандартный вывод или output.txt\n",
-    "\n",
-    "Вася играет в настольную игру «Пираты Баренцева моря», которая посвящена морским битвам. Игровое поле представляет собой квадрат из N×N клеток, на котором расположено N кораблей (каждый корабль занимает одну клетку).\n",
-    "\n",
-    "Вася решил воспользоваться линейной тактикой, для этого ему необходимо выстроить все N кораблей в одном столбце. За один ход можно передвинуть один корабль в одну из четырёх соседних по стороне клеток. Номер столбца, в котором будут выстроены корабли, не важен. Определите минимальное количество ходов, необходимых для построения кораблей в одном столбце. В начале и процессе игры никакие два корабля не могут находиться в одной клетке.\n",
-    "\n",
-    "**Формат ввода**\n",
-    "В первой строке входных данных задаётся число N (1≤N≤100).\n",
-    "\n",
-    "В каждой из следующих N строк задаются координаты корабля: сначала номер строки, затем номер столбца (нумерация начинается с единицы).\n",
-    "\n",
-    "**Формат вывода**\n",
-    "Выведите одно число — минимальное количество ходов, необходимое для построения.\n",
-    "\n",
-    "**Пример**\n",
-    "Ввод\n",
-    "Вывод\n",
-    "\n",
-    "3\n",
-    "\n",
-    "1 2\n",
-    "\n",
-    "3 3\n",
-    "\n",
-    "1 1\n",
-    "\n",
-    "3\n",
-    "\n",
-    "**Примечания**\n",
-    "В примере необходимо выстроить корабли в столбце номер 2. Для этого необходимо переставить корабль из клетки 3 3 в клетку 3 2 за один ход, а корабль из клетки 1 1 в клетку 2 2 за два хода. Существуют и другие варианты перестановки кораблей, однако ни в одном из них нет меньше трёх ходов. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "015df352",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 2), (3, 3), (1, 1)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "starting_coords = []\n",
-    "\n",
-    "# N = int(input())\n",
-    "# for i in range(N):\n",
-    "#     a, b = map(int,input().split())\n",
-    "#     starting_coords.append((a,b))  \n",
-    "    \n",
-    "N = 3\n",
-    "starting_coords = [(1, 2), (3, 3), (1, 1)]\n",
-    "\n",
-    "\n",
-    "    \n",
-    "print(starting_coords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e48d237",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c5f0b6a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0877976d",
+   "id": "0429b5ec",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#PRECISE BUT SLOW ALGO\n",
+    "\n",
     "table = []\n",
     "\n",
     "n, m = map(int, input().split())\n",
@@ -2411,6 +2308,236 @@
     "        \n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7afab8eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab6a903a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de6d11d4",
+   "metadata": {},
+   "source": [
+    "### I. Пираты Баренцева моря\n",
+    "\n",
+    "Ограничение времени \t1 секунда\n",
+    "Ограничение памяти \t64Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Вася играет в настольную игру «Пираты Баренцева моря», которая посвящена морским битвам. Игровое поле представляет собой квадрат из N×N клеток, на котором расположено N кораблей (каждый корабль занимает одну клетку).\n",
+    "\n",
+    "Вася решил воспользоваться линейной тактикой, для этого ему необходимо выстроить все N кораблей в одном столбце. За один ход можно передвинуть один корабль в одну из четырёх соседних по стороне клеток. Номер столбца, в котором будут выстроены корабли, не важен. Определите минимальное количество ходов, необходимых для построения кораблей в одном столбце. В начале и процессе игры никакие два корабля не могут находиться в одной клетке.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "В первой строке входных данных задаётся число N (1≤N≤100).\n",
+    "\n",
+    "В каждой из следующих N строк задаются координаты корабля: сначала номер строки, затем номер столбца (нумерация начинается с единицы).\n",
+    "\n",
+    "**Формат вывода**\n",
+    "Выведите одно число — минимальное количество ходов, необходимое для построения.\n",
+    "\n",
+    "**Пример**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "3\n",
+    "\n",
+    "1 2\n",
+    "\n",
+    "3 3\n",
+    "\n",
+    "1 1\n",
+    "\n",
+    "3\n",
+    "\n",
+    "**Примечания**\n",
+    "В примере необходимо выстроить корабли в столбце номер 2. Для этого необходимо переставить корабль из клетки 3 3 в клетку 3 2 за один ход, а корабль из клетки 1 1 в клетку 2 2 за два хода. Существуют и другие варианты перестановки кораблей, однако ни в одном из них нет меньше трёх ходов. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "015df352",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "starting_coords = []\n",
+    "\n",
+    "# N = int(input())\n",
+    "# for i in range(N):\n",
+    "#     a, b = map(int,input().split())\n",
+    "#     starting_coords.append((a,b))  \n",
+    "    \n",
+    "# N = 3\n",
+    "# starting_coords = [(1, 2), (3, 3), (1, 1)]\n",
+    "\n",
+    "with open('yandex algo tests/19') as f:\n",
+    "    content = f.readlines()\n",
+    "N = int(content[0])\n",
+    "for lines in range(1, len(content)):\n",
+    "    line = [i for i in map(int, content[lines].split())]\n",
+    "    starting_coords.append(line)\n",
+    "\n",
+    "#Let's find which column is cheapest to move to\n",
+    "column_cost_to_move_all = {}\n",
+    "for col in range(1, N+1):\n",
+    "    \n",
+    "    moves_req_for_this_col = 0\n",
+    "    \n",
+    "    for ship in starting_coords:\n",
+    "        moves_req_for_this_col += abs(ship[1] - col)\n",
+    "        \n",
+    "    column_cost_to_move_all[col] = moves_req_for_this_col\n",
+    "    \n",
+    "least_x_moves = min(column_cost_to_move_all.values())\n",
+    "cheapest_column = min([key for key, value in column_cost_to_move_all.items() if value == least_x_moves])\n",
+    "\n",
+    "#calculate minimum y shift required for each ship\n",
+    "#which cells are free and which ships are to be moved y-wise?\n",
+    "free_y_cells = [(i, cheapest_column) for i in range(1, N+1)]\n",
+    "ships_to_move_y = starting_coords.copy()\n",
+    "\n",
+    "     \n",
+    "# print('ships_to_move_y ', ships_to_move_y)              \n",
+    "ships_to_move_y.sort()\n",
+    "# print('ships_to_move_y ', ships_to_move_y)\n",
+    "\n",
+    "# print('free_y_cells ', free_y_cells)   \n",
+    "free_y_cells.sort()\n",
+    "# print('free_y_cells ', free_y_cells)\n",
+    "\n",
+    "current_ship_buffer = []\n",
+    "y_moves_made = 0\n",
+    "\n",
+    "for cell in free_y_cells:\n",
+    "    min_ship = []\n",
+    "    if current_ship_buffer:\n",
+    "        for ship in current_ship_buffer:\n",
+    "            dist = abs(cell[0] - ship[0])\n",
+    "            min_ship.append(dist)\n",
+    "        min_moves = min(min_ship)\n",
+    "        min_ind = min_ship.index(min_moves)\n",
+    "#         print('MOVE SHIP ', current_ship_buffer[min_ind], 'TO ', cell, 'min_moves ', min_moves)\n",
+    "        del(current_ship_buffer[min_ind])\n",
+    "        del(ships_to_move_y[min_ind])\n",
+    "        y_moves_made += min_moves\n",
+    "    else:\n",
+    "        for ship in ships_to_move_y:\n",
+    "            dist = abs(cell[0] - ship[0])\n",
+    "            min_ship.append(dist)\n",
+    "        min_moves = min(min_ship)\n",
+    "        min_ind = min_ship.index(min_moves)\n",
+    "#         print('MOVE SHIP ', ships_to_move_y[min_ind], 'TO ', cell, 'min_moves ', min_moves)\n",
+    "        del(ships_to_move_y[min_ind])\n",
+    "        y_moves_made += min_moves\n",
+    "    current_ship_buffer = current_ship_buffer + [i for i in ships_to_move_y if i[0] == cell[0]]\n",
+    "#     print('current_ship_buffer ', current_ship_buffer)\n",
+    "    \n",
+    "total_moves_1 = least_x_moves + y_moves_made\n",
+    "      \n",
+    "# print(column_cost_to_move_all)\n",
+    "# print('cheapest_column ', cheapest_column)\n",
+    "\n",
+    "print(total_moves_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b51e9ae5",
+   "metadata": {},
+   "source": [
+    "### J. Два прямоугольника\n",
+    "\n",
+    "Ограничение времени \t1 секунда\n",
+    "Ограничение памяти \t64Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Недавно один известный художник-абстракционист произвел на свет новый шедевр — картину «Два черных непересекающихся прямоугольника». Картина представляет собой прямоугольник m× n, разбитый на квадраты 1× 1, некоторые из которых закрашены любимым цветом автора — черным. Федя — не любитель абстрактных картин, однако ему стало интересно, действительно ли на картине изображены два непересекающихся прямоугольника. Помогите ему это узнать. Прямоугольники не пересекаются в том смысле, что они не имеют общих клеток.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "\n",
+    "Первая строка входного файла содержит числа m и n (1 ≤ m, n ≤ 200). Следующие m строк содержат описание рисунка. Каждая строка содержит ровно n символов. Символ «.» обозначает пустой квадрат, а символ «#» — закрашенный.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "\n",
+    "Если рисунок можно представить как два непересекающихся прямоугольника, выведите в первой строке «YES», а в следующих m строках выведите рисунок в том же виде, в каком он задан во входном файле, заменив квадраты, соответствующие первому прямоугольнику на символ «a», а второму — на символ «b». Если решений несколько, выведите любое.\n",
+    "\n",
+    "Если же этого сделать нельзя, выведите в выходной файл «NO».\n",
+    "\n",
+    "**Пример 1**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "2 1\n",
+    "#\n",
+    ".\n",
+    "\n",
+    "NO\n",
+    "\n",
+    "**Пример 2**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "2 2\n",
+    "..\n",
+    "##\n",
+    "\n",
+    "YES\n",
+    "..\n",
+    "ab\n",
+    "\n",
+    "**Пример 3**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "1 3\n",
+    "###\n",
+    "\n",
+    "YES\n",
+    "abb\n",
+    "\n",
+    "**Пример 4**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "1 5\n",
+    "####.\n",
+    "\n",
+    "YES\n",
+    "abbb.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c5f0b6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
